New files from Fly.io Launch

--- a/fly.toml
+++ b/fly.toml
@@ -1,62 +1,23 @@
-# Fly.io configuration
-app = "devops-agent"
-primary_region = "iad"
+# fly.toml app configuration file generated for devops-agent-aut-nomo---plan-de on 2026-02-21T03:47:08Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'devops-agent-aut-nomo---plan-de'
+primary_region = 'gru'
 
 [build]
-  dockerfile = "Dockerfile"
-
-[env]
-  NODE_ENV = "production"
-  LOG_LEVEL = "info"
 
 [http_service]
-  internal_port = 3000
+  internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
-
-[[http_service.checks]]
-  grace_period = "10s"
-  interval = "30s"
-  method = "GET"
-  path = "/health"
-  protocol = "http"
-  timeout = "5s"
-  type = "http"
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-  cpu_kind = "shared"
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 256
-  processes = ["app"]
-
-[processes]
-  app = "node src/server.js"
-
-[deploy]
-  release_command = "echo 'Deployment started'"
-  strategy = "rolling"
-
-[[services]]
-  internal_port = 3000
-  processes = ["app"]
-  protocol = "tcp"
-  
-  [services.concurrency]
-    hard_limit = 100
-    soft_limit = 50
-    type = "connections"
-
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-  [[services.tcp_checks]]
-    grace_period = "10s"
-    interval = "15s"
-    timeout = "5s"
+  memory_mb = 1024
