--- a/fly.toml
+++ b/fly.toml
@@ -1,32 +1,23 @@
-# Fly.io configuration for devops-agent
-app = "devops-agent"
-primary_region = "iad"
+# fly.toml app configuration file generated for devops-agent-aut-nomo---plan-de on 2026-02-22T03:59:10Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'devops-agent-aut-nomo---plan-de'
+primary_region = 'iad'
 
 [build]
-  dockerfile = "Dockerfile"
-
-[env]
-  NODE_ENV = "production"
-  LOG_LEVEL = "info"
-  PORT = "3000"
 
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
+  processes = ['app']
 
-[[http_service.checks]]
-  grace_period = "10s"
-  interval = "30s"
-  method = "GET"
-  path = "/health"
-  protocol = "http"
-  timeout = "5s"
-  tls_skip_verify = false
-
-[vm]
-  cpu_kind = "shared"
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 256
+  memory_mb = 1024
